[gd_scene load_steps=4 format=2]

[ext_resource path="res://objects/VoteItemEdit.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://objects/VotePageEdit.gd" type="Script" id=3]

[node name="VotePageEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
vote_item_scene = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 46.0
custom_constants/separation = 16

[node name="BtNewItem" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 139.0
margin_bottom = 46.0
size_flags_horizontal = 0
text = "New Item"

[node name="BtRenamePage" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 202.0
margin_right = 388.0
margin_bottom = 46.0
size_flags_horizontal = 10
text = "Rename Page"

[node name="BtDeletePage" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 472.0
margin_right = 637.0
margin_bottom = 46.0
size_flags_horizontal = 10
text = "Delete Page"

[node name="ColumnsLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 771.0
margin_right = 886.0
margin_bottom = 46.0
size_flags_horizontal = 10
size_flags_vertical = 1
text = "Columns"
align = 2
valign = 1

[node name="ColumnsSpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 902.0
margin_right = 1024.0
margin_bottom = 46.0
size_flags_horizontal = 8
min_value = 1.0
max_value = 5.0
value = 2.0
rounded = true
align = 1

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 16
custom_constants/hseparation = 16
columns = 2

[node name="NamePopup" type="PopupPanel" parent="."]
visible = true
margin_left = 139.0
margin_top = 195.0
margin_right = 822.0
margin_bottom = 304.0
__meta__ = {
"_edit_group_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="NamePopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 679.0
margin_bottom = 105.0

[node name="HBoxContainer" type="HBoxContainer" parent="NamePopup/VBoxContainer"]
margin_right = 675.0
margin_bottom = 42.0

[node name="PageNameLabel" type="Label" parent="NamePopup/VBoxContainer/HBoxContainer"]
margin_right = 566.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Enter Page Name"
align = 1
valign = 1

[node name="BtSubmit" type="Button" parent="NamePopup/VBoxContainer/HBoxContainer"]
margin_left = 570.0
margin_right = 675.0
margin_bottom = 42.0
text = "Submit"

[node name="PageNameEdit" type="LineEdit" parent="NamePopup/VBoxContainer"]
margin_top = 46.0
margin_right = 675.0
margin_bottom = 92.0
size_flags_horizontal = 3
align = 1

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtNewItem" to="." method="_on_BtNewItem_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtRenamePage" to="." method="_on_BtRenamePage_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BtDeletePage" to="." method="_on_BtDeletePage_pressed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/ColumnsSpinBox" to="." method="_on_ColumnsSpinBox_value_changed"]
[connection signal="pressed" from="NamePopup/VBoxContainer/HBoxContainer/BtSubmit" to="." method="_on_PageNameEdit_text_entered" binds= [ "" ]]
[connection signal="text_entered" from="NamePopup/VBoxContainer/PageNameEdit" to="." method="_on_PageNameEdit_text_entered"]
